# ros2_ws

./: .gitignore  LICENSE  README.md  TABLE_TENNIS_SIMULATION_SUMMARY.md  auto_commit.sh  frames_2026-01-29_12.57.04.gv  t  t.pub
src/mycobot_ros2/mycobot_bringup/: CMakeLists.txt  package.xml
src/mycobot_ros2/mycobot_description/: CMakeLists.txt  package.xml
src/mycobot_ros2/mycobot_description/launch/: robot_state_publisher.launch.py
src/mycobot_ros2/mycobot_description/urdf/control/: mycobot_280_ros2_control.urdf.xacro
src/mycobot_ros2/mycobot_description/urdf/parts/: G_base.urdf.xacro  adaptive_gripper.urdf.xacro  mycobot_280_arm.urdf.xacro
src/mycobot_ros2/mycobot_description/urdf/robots/: mycobot_280.urdf.xacro
src/mycobot_ros2/mycobot_gazebo/: CMakeLists.txt  package.xml
src/mycobot_ros2/mycobot_gazebo/config/: ros_gz_bridge.yaml
src/mycobot_ros2/mycobot_gazebo/launch/: mycobot.gazebo.launch.py
src/mycobot_ros2/mycobot_gazebo/worlds/: empty.world  house.world  pick_and_place_demo.world
src/mycobot_ros2/mycobot_moveit_config/: CMakeLists.txt  package.xml
src/mycobot_ros2/mycobot_moveit_config/config/mycobot_280/: ros2_controllers.yaml  ros2_controllers_template.yaml
src/mycobot_ros2/mycobot_moveit_config/launch/: load_ros2_controllers.launch.py
src/mycobot_ros2/mycobot_ros2/: package.xml
src/mycobot_ros2/mycobot_system_tests/: CMakeLists.txt  package.xml
src/mycobot_ros2/mycobot_system_tests/scripts/: arm_controller.py  arm_gripper_loop_controller.py  gripper_controller.py
src/mycobot_ros2/mycobot_system_tests/src/: arm_gripper_loop_controller.cpp
src/pick_n_place_description/: CMakeLists.txt  README.md  package.xml
src/pick_n_place_description/urdf/end_effectors/paddle/: paddle.urdf.xacro
src/pick_n_place_description/urdf/robots/: franka_with_paddle.urdf.xacro
src/pick_n_place_description/urdf/sensors/: realsense_d435.urdf.xacro
src/pick_n_place_gazebo/: CMakeLists.txt  README.md  package.xml
src/pick_n_place_gazebo/config/: red_controllers.yaml
src/pick_n_place_gazebo/launch/: simulation.launch.py  test.launch.py
src/pick_n_place_gazebo/models/ball/: model.config  model.sdf
src/pick_n_place_gazebo/models/camera/: model.config  model.sdf
src/pick_n_place_gazebo/models/cube/: model.config  model.sdf
src/pick_n_place_gazebo/models/overhead_camera/: model.config  model.sdf
src/pick_n_place_gazebo/rviz/: dual_robots.rviz  red_robot.rviz
src/pick_n_place_gazebo/src/: ball_spawner_node.cpp
src/pick_n_place_gazebo/srv/: SpawnBall.srv
src/pick_n_place_gazebo/worlds/: arena.world  pick_place.world
src/table_tennis_description/meshes/paddle/: table_tennis_racket.stl
src/table_tennis_description/scripts/: generate_paddle_mesh.py
src/table_tennis_description/urdf/control/: franka_ros2_control.urdf.xacro  gazebo_sim_ros2_control.urdf.xacro
src/table_tennis_description/urdf/end_effectors/paddle/: paddle.urdf.xacro
src/table_tennis_description/urdf/robots/: franka_with_paddle.urdf.xacro
src/table_tennis_gazebo/: CMakeLists.txt  package.xml
src/table_tennis_gazebo/action/: SpawnBall.action
src/table_tennis_gazebo/config/: controllers.yaml  controllers_namespaced.yaml  minimal_controllers.yaml
src/table_tennis_gazebo/launch/: ball_spawn.launch.py  bridge.launch.py  simulation.launch.py  test.launch.py
src/table_tennis_gazebo/models/: franka_description  table_tennis_description
src/table_tennis_gazebo/models/side_camera/: model.config  model.sdf
src/table_tennis_gazebo/models/table/: model.config  model.sdf
src/table_tennis_gazebo/rviz/: green_robot.rviz  red_robot.rviz  single_robot.rviz
src/table_tennis_gazebo/scripts/: ball_spawn_client.py  ball_spawner_node.py
src/table_tennis_gazebo/src/: ball_spawner_node.cpp  ball_spawner_node.cpp.bak
src/table_tennis_gazebo/worlds/: arena.world  empty.world  test_simple.world
src/ur5_ros2/ur5_description/: CMakeLists.txt  package.xml
src/ur5_ros2/ur5_ros2/: CMakeLists.txt  package.xml
src/yahboom_x3_ros2/yahboom_x3_description/: CMakeLists.txt  package.xml
src/yahboom_x3_ros2/yahboom_x3_description/launch/: robot_state_publisher.launch.py
src/yahboom_x3_ros2/yahboom_x3_description/rviz/: yahboom_x3_description.rviz
src/yahboom_x3_ros2/yahboom_x3_description/urdf/parts/: mechanum_wheels.urdf.xacro  yahboom_x3_base.urdf.xacro
src/yahboom_x3_ros2/yahboom_x3_description/urdf/robots/: yahboom_x3.urdf.xacro
src/yahboom_x3_ros2/yahboom_x3_description/urdf/sensors/: imu.urdf.xacro  lidar.urdf.xacro  rgbd_camera.urdf.xacro
src/yahboom_x3_ros2/yahboom_x3_ros2/: CMakeLists.txt  package.xml
