<?xml version="1.0"?>
<package format="3">
  <name>pick_n_place_gazebo</name>
  <version>0.1.0</version>
  <description>Gazebo simulation for industrial robot pick and place</description>
  <maintainer email="hungdangpham.ai@gmail.com">Hung Dang Pham</maintainer>
  <license>MIT</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>controller_manager</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>

  <!-- Robot descriptions -->
  <depend>pick_n_place_description</depend>
  <depend>franka_description</depend>

  <!-- RViz -->
  <depend>rviz2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
